fjerner enable-preview param